XIVY-9730 Load jvm-module.options from bin/jvm-module.options with backward compatiblity support